objects/User_Segment_Exceptions__c.object
<CustomObject>
    <description>If more than one Segment for a user look in this table</description>
    <fields>
        <fullName>Segment_Code__c</fullName>
        <label>Segment Code</label>
        <picklist>
            <picklistValues>
                <fullName>AUTG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAAT</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>PFW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Is_Active__c</fullName>
        <formula>User__r.IsActive</formula>
        <label>User Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Segment_Exceptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Segment Exceptions</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Segment_Code__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>User_Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Autointegrity</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Segment_Code__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>User_Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Segment_Code__c</field>
            <operation>equals</operation>
            <value>AUTG</value>
        </filters>
        <label>Autointegrity</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PFW</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Segment_Code__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Segment_Code__c</field>
            <operation>equals</operation>
            <value>PFW</value>
        </filters>
        <label>PFW</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ID-{0000}</displayFormat>
        <label>User Segment Exceptions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Segment Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>